--- a/CasaDoCodigo/Views/Pedido/BuscaDeProdutos.cshtml
+++ b/CasaDoCodigo/Views/Pedido/BuscaDeProdutos.cshtml
@@ -7,19 +7,21 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
-            <h2>Buscar produtos</h2>
-            <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" name="pesquisa" class="form-control input-lg" placeholder="categoria ou produto" id="Pesquisa" value="" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-info btn-lg" type="submit">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </span>
+        <form asp-action="buscaDeProdutos" method="get">
+            <div class="col-md-4">
+                <h2>Buscar produtos</h2>
+                <div id="custom-search-input">
+                    <div class="input-group col-md-12">
+                        <input type="text" name="pesquisa" class="form-control input-lg" placeholder="Categoria ou Produto" id="Pesquisa" asp-for="@Model.Pesquisa">
+                        <span class="input-group-btn">
+                            <button class="btn btn-info btn-lg" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </span>
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
@@ -31,7 +33,7 @@
         foreach (var categoria in produtosCategoria)
         {
             <h3>@(categoria.Key.Nome)</h3>
-
+            
             <div id="my-carousel-@(categoria.Key.Id)" class="carousel slide" data-ride="carousel">
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
@@ -76,11 +78,11 @@
                     }
                 </div>
                 <!-- Controls -->
-                <a class="left carousel-control" href="#my-carousel-1" role="button" data-slide="prev">
+                <a class="left carousel-control" href="#my-carousel-@(categoria.Key.Id)" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-control" href="#my-carousel-1" role="button" data-slide="next">
+                <a class="right carousel-control" href="#my-carousel-@(categoria.Key.Id)" role="button" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
